make sure buttons in watchlist header are aligned correctly (376)
previously the active button was jutting out somewhat
use vertical align instead

also make the border radiuses work again by wrapping them so the button
is the first element not the hamburger and use mix in

--- a/stylesheets/common/mf-navigation.css
+++ b/stylesheets/common/mf-navigation.css
@@ -93,9 +93,7 @@ input[type=submit].cancel {
   color: #58595b;
   border: 1px solid #9ea0a3;
   border-right: none;
-  /* fixes button alignment when active button is bold */
-
-  line-height: 1.1em;
+  vertical-align: middle;
   white-space: nowrap;
 }
 .header a.button.active {
@@ -103,12 +101,15 @@ input[type=submit].cancel {
   font-weight: bold;
 }
 .header a.button:first-child {
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
+  -webkit-border-radius: 3px 0 0 3px;
+  -moz-border-radius: 3px 0 0 3px;
+  border-radius: 3px 0 0 3px;
+  border-left: 1px solid #9ea0a3;
 }
 .header a.button:last-child {
-  border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
+  -webkit-border-radius: 0 3px 3px 0;
+  -moz-border-radius: 0 3px 3px 0;
+  border-radius: 0 3px 3px 0;
   border-right: 1px solid #9ea0a3;
 }
 #mw-mf-header form,
